# CM2290-WifiCamera-demo

./: README.md
WifiCamera/: gst-pipe_0.1.bb
WifiCamera/gst-pipe/: CMakeLists.txt  gst-camera.hpp  gst-common.h  gst-pipe-factory.hpp  gst-pipe.hpp  gst-rtsp-server.hpp  gst-test-base.cpp  gst-test-server.cpp  gst-test.cpp
WifiCamera/sh/: wifi-camera.sh
doc/: CM2290-WIFICamera-demo-doc.docx  Video_description.txt
res/: result
